<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cricketbackground"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/app_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/header"
            android:textAllCaps="true"
            android:textColor="#8BC34A"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tagLine_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name_id"
            android:layout_centerHorizontal="true"
            android:text="@string/tagLine"
            android:textColor="#8BC34A"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userName_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagLine_id"
            android:gravity="center"
            android:hint="@string/userNameInput"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <Button
            android:id="@+id/startButton_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#8BC34A"
            android:text="@string/start"
            android:textAllCaps="true" />


    </RelativeLayout>

</RelativeLayout>