<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/firstpageindia"
    tools:context=".fifthQuestion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/fifthQuestionHeader_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/fifthQuestionHeader"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/fifthQuestion_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthQuestionHeader_id"
            android:text="@string/fifthQuestion"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/fifthAnswer_id"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthQuestion_id"
            android:layout_centerHorizontal="true"
            android:inputType="text" />

        <Button
            android:id="@+id/fifthPageSubmit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthAnswer_id"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:onClick="fifthSubmitAnswer"
            android:text="@string/submit"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scoreTextFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthAnswer_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="Score"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scoreFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreTextFive"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="0"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/fifthNextButton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthAnswer_id"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:text="@string/next"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/fifthPagePicture_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fifthPageSubmit_id"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fifthpagepicture"
            android:visibility="invisible" />
    </RelativeLayout>

</ScrollView>