<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/england"
    tools:context=".thirdQuestion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/thirdQuestionHeader_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="@string/thirdQuestionHeader"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/thirdQuestion_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdQuestionHeader_id"
            android:text="@string/thirdQuestion"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/thirdOptionsLayout_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdQuestion_id"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/third_RadioButtonOne_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The Oval"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/third_RadioButtonTwo_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edgbaston Stadium"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/third_RadioButtonThree_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Old Trafford"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/third_RadioButtonFour_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lord's Cricket Ground"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>


        <Button
            android:id="@+id/thirdPageSubmit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdOptionsLayout_id"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:onClick="thirdSubmitAnswer"
            android:text="@string/submit"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scoreTextThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdOptionsLayout_id"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="Score"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/scoreThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scoreTextThree"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/thirdNextButton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdOptionsLayout_id"
            android:layout_alignParentRight="true"
            android:layout_marginTop="12dp"
            android:text="@string/next"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/thirdPagePicture_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thirdPageSubmit_id"
            android:scaleType="fitCenter"
            android:src="@drawable/thirdpagepicture"
            android:visibility="invisible" />


    </RelativeLayout>


</ScrollView>